Reload support and quick menu